Added back UCOP Salary Scale URL
also added FullNameTitleCodeLabel, and SalaryStep as appropriate.

--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -57,9 +57,9 @@
                 "aaSorting": [[0, 'desc'], [6, 'asc']], // Change default sort to IsDepartmentEmployee desc, Employee.FullName; otherwise it sorts by column 0.
                 "aoColumns": [
                                                 { "sName": "IsDepartmentEmployee", "bVisible": false },  // "bVisible": false "hides" the column from the user.
-                                                {"sName": "Edit", "bSortable": false }, // "bSortable": false disables user-enabled sorting on the column.
-                                                {"sName": "HomeDepartment" }, // "sName": HomeDepartment gives the column a name in the oSettings.aoColumns[] array.  This is used in _ExportToExcel.
-                                                {"sName": "TitleCode" },
+                                                { "sName": "Edit", "bSortable": false }, // "bSortable": false disables user-enabled sorting on the column.
+                                                { "sName": "HomeDepartment" }, // "sName": HomeDepartment gives the column a name in the oSettings.aoColumns[] array.  This is used in _ExportToExcel.
+                                                { "sName": "TitleCode" },
                                                 { "sName": "SalaryGrade" },
                                                 { "sName": "BargainingUnitCode" },
                                                 { "sName": "FullName", "sType": "deptEmployee" },
@@ -70,6 +70,7 @@
                                                 { "sName": "ExperienceBeginDate", "bSortable": false },
                                                 { "sName": "YearsOfExperience" },
                                                 { "sName": "PayRate", "sType": "currency" },
+                                                { "sName": "SalaryStep" },
                                                 { "sName": "DepartmentComments", "bSortable": false },
                                                 { "sName": "DeansOfficeComments", "bSortable": false }
                                             ]
