--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -82,62 +82,74 @@
         }
     </style>
     <style type='text/css'>
-        .wideMultiSelect
-        {
-            background-color: #fcfcfc;
-            border: 1px solid #000;
-            width: 800px;
-            margin-top: 5px;
-            height: 200px;
-            max-height: 200px;
-            overflow: auto;
-        }
+	    .wideMultiSelect
+	    {
+		    background-color: #fcfcfc;
+		    border: 1px solid #000;
+		    width: 800px;
+		    margin-top: 5px;
+		    height: 200px;
+		    max-height: 200px;
+		    overflow: auto;
+	    }
 
-        .wideMultiSelect > .row
-        {
-            border-bottom: 1px dotted #ccc;
-            padding: 2px;
-        }
+	    .wideMultiSelect > .row
+	    {
+		    border-bottom: 1px dotted #ccc;
+		    padding: 2px;
+	    }
 
-        .wideMultiSelect > .row:last-child
-        {
-            border-bottom: 0;
-        }
+	    .wideMultiSelect > .row:last-child
+	    {
+		    border-bottom: 0;
+	    }
 
-        .wideMultiSelect > .row > .delete
-        {
-            cursor: pointer;
-            margin-bottom: -2px;
-        }
+	    .wideMultiSelect > .row > .delete
+	    {
+		    cursor: pointer;
+		    margin-bottom: -2px;
+	    }
 
-        .narrowMultiSelect
-        {
-            background-color: #fcfcfc;
-            border: 1px solid #000;
-            width: 275px;
-            margin-top: 5px;
-            height: 200px;
-            max-height: 200px;
-            overflow: auto;
-        }
+	    .narrowMultiSelect
+	    {
+		    background-color: #fcfcfc;
+		    border: 1px solid #000;
+		    width: 275px;
+		    margin-top: 5px;
+		    height: 200px;
+		    max-height: 200px;
+		    overflow: auto;
+	    }
 
-        .narrowMultiSelect > .row
-        {
-            border-bottom: 1px dotted #ccc;
-            padding: 2px;
-        }
+	    .narrowMultiSelect > .row
+	    {
+		    border-bottom: 1px dotted #ccc;
+		    padding: 2px;
+	    }
 
-        .narrowMultiSelect > .row:last-child
-        {
-            border-bottom: 0;
-        }
+	    .narrowMultiSelect > .row:last-child
+	    {
+		    border-bottom: 0;
+	    }
 
-        .narrowMultiSelect > .row > .delete
-        {
-            cursor: pointer;
-            margin-bottom: -2px;
-        }
+	    .narrowMultiSelect > .row > .delete
+	    {
+		    cursor: pointer;
+		    margin-bottom: -2px;
+	    }
+	    #headertext p {
+		    font-size:12px;
+		    font-weight: bold;
+		    font-style: italic;
+		    margin:10px 0px 20px 0px
+	    }
     </style>
+    	#headertext p {
+	  font-size:12px;
+	  font-weight: bold;
+	  font-style: italic;
+	  margin:10px 0px 20px 0px
+	}
 </head>
 <body>
     <div class="wrapper">
