--- a/Esra.Web/Views/SalaryReviewAnalysis/_EmployeeDetails.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_EmployeeDetails.cshtml
@@ -8,9 +8,12 @@
                 <th>
                     Title Code
                 </th>
-                <th>
-                    Payroll Title
-                </th>
+	            <th>
+		            Payroll Title
+	            </th>
+	            <th>
+		            Salary Plan
+	            </th>
                 <th>
                     Salary Grade
                 </th>
@@ -28,9 +31,12 @@
                 <td>
                     @Model.SraEmployee.TitleCode
                 </td>
-                <td>
-                    @Model.SraEmployee.Title.PayrollTitle
-                </td>
+	            <td>
+		            @Model.SraEmployee.Title.PayrollTitle
+	            </td>
+	            <td>
+		            @Model.SraEmployee.SalaryAdminPlan
+	            </td>
                 <td>
                     @Model.SraEmployee.SalaryGrade
                 </td>
