--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -59,7 +59,8 @@
                                                 { "sName": "IsDepartmentEmployee", "bVisible": false },  // "bVisible": false "hides" the column from the user.
                                                 { "sName": "Edit", "bSortable": false }, // "bSortable": false disables user-enabled sorting on the column.
                                                 { "sName": "HomeDepartment" }, // "sName": HomeDepartment gives the column a name in the oSettings.aoColumns[] array.  This is used in _ExportToExcel.
-                                                { "sName": "TitleCode" },
+												{ "sName": "TitleCode" },
+                                                { "sName": "SalaryPlan" },
                                                 { "sName": "SalaryGrade" },
                                                 { "sName": "BargainingUnitCode" },
                                                 { "sName": "FullName", "sType": "deptEmployee" },
